design structure for database site adding

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,66 @@
 <head>
     <meta charset="UTF-8" />
     <title>My Application</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
 
-    <div class="container">
-        <h1>Hello There!</h1>
-        <p>To get started, edit <code>src/index.js</code>.</p>
+
+<header>
+
+    <nav class="navbar navbar-light bg-light justify-content-between">
+        <a class="navbar-brand"><i class="material-icons">play_circle_outline</i> miniMoviesDB </a>
+        <form class="form-inline">
+            5:50PM
+            November 1st 1987  <i class="material-icons">alarm</i>
+        </form>
+    </nav>
+
+</header>
+
+<div class="sub-header">
+
+    <nav class="navbar navbar-light bg-light justify-content-between">
+        <div class="navbar-brand">  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <i class="material-icons">play_circle_filled</i></div>
+        <form class="form-inline">
+            Title <i class="material-icons">title</i> | Genre   | Rating <i class="material-icons">reorder</i>
+
+            [Add]<i class="material-icons">note_add</i>
+        </form>
+    </nav>
+
+
+
+
+</div>
+
+<div class="left-bar">
+
+</div>
+
+<footer>
+
+</footer>
+
+
+    <div class="loading-container">
+        <img src="images/loader.svg">
     </div>
 
+<div class="d-flex ">
+    <div id="moviesList">
+    </div>
+
+
+</div>
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="/main.js"></script>
 </body>
 </html>
