--- a/public/index.html
+++ b/public/index.html
@@ -12,52 +12,69 @@
 
 <header>
 
-    <nav class="navbar navbar-light bg-light justify-content-between">
+    <nav class="navbar navbar-dark justify-content-between navbar-fixed-top fixed-top first-header">
         <a class="navbar-brand"><i class="material-icons">play_circle_outline</i> miniMoviesDB </a>
-        <form class="form-inline">
+        <div class="form-inline">
             5:50PM
             November 1st 1987  <i class="material-icons">alarm</i>
-        </form>
+        </div>
     </nav>
 
 </header>
 
 <div class="sub-header">
 
-    <nav class="navbar navbar-light bg-light justify-content-between">
+    <nav class="navbar justify-content-between fixed-top navbar-fixed-top second-header">
         <div class="navbar-brand">  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <i class="material-icons">play_circle_filled</i></div>
-        <form class="form-inline">
+            <!--<i class="material-icons">play_circle_filled</i>-->
+        </div>
+        <div class="form-inline">
             Title <i class="material-icons">title</i> | Genre   | Rating <i class="material-icons">reorder</i>
 
             [Add]<i class="material-icons">note_add</i>
-        </form>
+        </div>
     </nav>
 
+</div>
 
 
+<div class="page-container">
+
+    <div class="row">
+
+        <div class="col-3 menu-left">
+
+
+            <ul>
+                <li>Item list 1</li>
+                <li>Item List 2</li>
+                <li>Item List 3</li>
+            </ul>
+
+
+        </div>
+
+        <div class="col-9">
+
+            <div class="loading-container">
+                <img src="images/loader.svg">
+            </div>
+
+
+                <div class="d-flex flex-row flex-wrap"  id="moviesList">
+                </div>
+
+        </div>
+    </div>
 
 </div>
 
-<div class="left-bar">
 
-</div>
 
 <footer>
 
 </footer>
 
-
-    <div class="loading-container">
-        <img src="images/loader.svg">
-    </div>
-
-<div class="d-flex ">
-    <div id="moviesList">
-    </div>
-
-
-</div>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
