--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="form-inline">
             Title <i class="material-icons">title</i> | Genre   | Rating <i class="material-icons">reorder</i>
-
+            <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
             [Add]<i class="material-icons">note_add</i>
         </div>
     </nav>
