ccs strucure further, working on edit buton and delete ect

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,6 @@
 
 <div class="page-container">
 
-    <div class="row">
 
         <div class="col-3 menu-left">
 
@@ -54,18 +53,17 @@
 
         </div>
 
-        <div class="col-9">
+        <div class="col-12">
 
             <div class="loading-container">
                 <img src="images/loader.svg">
             </div>
 
 
-                <div class="d-flex flex-row flex-wrap"  id="moviesList">
+                <div class="d-flex flex-row flex-wrap justify-content-between"  id="moviesList">
                 </div>
 
         </div>
-    </div>
 
 </div>
 
