--- a/public/index.html
+++ b/public/index.html
@@ -9,54 +9,56 @@
 </head>
 <body>
 
+<div id="movie-full" class="hide">
+    <div class="bg-container"></div>
+</div>
+
 
 <header>
-
     <nav class="navbar navbar-dark justify-content-between navbar-fixed-top fixed-top first-header">
         <a class="navbar-brand"><i class="material-icons">play_circle_outline</i> miniMoviesDB </a>
-        <div class="form-inline">
-            5:50PM
-            November 1st 1987  <i class="material-icons">alarm</i>
+        <div class="form-inline">  &nbsp;
+            <span id="clock">5:50PM</span> <i class="material-icons">alarm</i>
         </div>
     </nav>
-
 </header>
 
 <div class="sub-header">
-
     <nav class="navbar justify-content-between fixed-top navbar-fixed-top second-header">
-        <div class="navbar-brand">  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <!--<i class="material-icons">play_circle_filled</i>-->
+        <div class="navbar-brand">
+            <input class="form-control mr-sm-2" id="search-movies" type="search" placeholder="Search" aria-label="Search">
         </div>
         <div class="form-inline">
             <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
             <i class="material-icons" aria-label="Add">note_add</i>
+            <div class="add">
+                <form method="post" id="addMovie">
+                    <input type="hidden" name="title" value="Test Movie">
+                    <input type="hidden" name="rank" value="7">
+                    <input type="hidden" name="id" value="tt0167260">
+                    <button type="submit" id="submit-new-movie">Add Movie</button>
+                </form>
+            </div>
         </div>
     </nav>
-
 </div>
 
 
 <div class="bg-container">
 </div>
+
 <div class="page-container">
-
-
         <div class="col-3 menu-left">
-
-
             <h4>Movies:</h4>
 
-
-            <h5 class="">Sort by</h5>
-            <ul>
-                <li>Title</li>
-                <li>Genre</li>
-                <li>Ranking</li>
-                <li>Recently Added</li>
-                <li>Category</li>
-            </ul>
-
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <a class="nav-link active sort-menu" id="v-pills-home-tab" data-toggle="pill" role="tab" aria-controls="v-pills-home" aria-selected="true" name="sort-by">Sort By</a>
+                <a class="nav-link sort-menu" id="v-pills-profile-tab" data-toggle="pill" role="tab" aria-controls="v-pills-profile" aria-selected="false" name="title">Title</a>
+                <a class="nav-link sort-menu" id="v-pills-messages-tab" data-toggle="pill" role="tab" aria-controls="v-pills-messages" aria-selected="false" name="ranking">Ranking</a>
+                <a class="nav-link sort-menu" id="v-pills-recent-tab" data-toggle="pill" role="tab" aria-controls="v-pills-settings" aria-selected="false" name="date_added">Recently Added</a>
+                <a class="nav-link sort-menu" id="v-pills-genre-tab" data-toggle="pill" role="tab" aria-controls="v-pills-settings" aria-selected="false" name="genre">Genre</a>
+                <a class="nav-link sort-menu" id="v-pills-fav-tab" data-toggle="pill" role="tab" aria-controls="v-pills-settings" aria-selected="false" name="favorites">Favorites</a>
+            </div>
         </div>
 
         <div class="col-12">
@@ -64,29 +66,12 @@
             <div class="loading-container">
                 <img src="images/loader.svg">
             </div>
-
-
                 <div class="d-flex flex-row flex-wrap justify-content-between"  id="moviesList">
                 </div>
 
         </div>
 
-
-
-
-    <div class="add">
-        <form method="post" id="addMovie">
-            <input type="hidden" name="movie-name" value="Test Movie">
-            <button type="submit">Add Movie</button>
-        </form>
-
-    </div>
-
 </div>
-
-
-
-
 
 
 <footer>
